fix: alert window text overflow issue

--- a/engine/game.css
+++ b/engine/game.css
@@ -25,14 +25,17 @@ body {
 /* Game custom alert modal window */
 .cg-game-alert {
     align-items: center;
-    backdrop-filter: blur(3px);
-    background-color: rgba(37, 37, 37, 0.6);
     display: flex;
     height: 100%;
     justify-content: center;
     position: absolute;
     width: 100%;
     z-index: 99;
+}
+
+.cg-game-alert-blur {
+    backdrop-filter: blur(3px);
+    background-color: rgba(37, 37, 37, 0.6);
 }
 
 .cg-game-alert-window {
@@ -55,10 +58,11 @@ body {
     font-size: 3vh;
     height: 60%;
     justify-content: center;
+    left: 10%;
     position: relative;
     top: 10%;
     user-select: none;
-    width: 100%;
+    width: 80%;
 }
 
 .cg-game-alert-confirm {
